--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 <section>
     <h2>Loading spinner</h2>
     <div class="spinner"></div>
+    </section>
+    <center>
+        <button type="button" id="stop-spinner-btn" class="btn">Stop Spinner</button>
+    </center>
 </section>
 <section class="card-section">
     <h2>Image Cart</h2>
